tests/conformance/negative/21-contract-enum-without-values.sml
<!-- Error: enum fields require values -->
<skill define="contract" name="enum-without-values">
  <field name="status" type="enum" />
</skill>
